# phase_change_analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: README.md  SUMMARY.md
examples/: integration_example.py  training_wrapper_demo.py
experiments/grokking/: analyze_cleanup_phase.py  analyze_gradients.py  analyze_gradnorm_from_existing.py  analyze_gradnorm_results.py  final_eigen_test.py  full_grokking_eigen.py  minimal_gradnorm_test.py  plot_eigen_evolution.py  quick_eigen_test.py  quick_gradnorm_check.py  run_50k_steps.py  run_cleanup.sh  run_cleanup_analysis.py  run_cleanup_with_gradnorm.py  run_experiment.sh  run_gradnorm_tracking.py  simple_eigen_plot.py  simple_model.py  test_eigen_simple.py  train_eigenvector_analysis.py  train_with_full_logging.py  train_with_logging_fixed.py  train_with_wrapper.py
experiments/grokking/follow_ups/: analyze_existing_results.py  cleanup_analysis_log.txt  cleanup_output.txt  (+4 more)
experiments/induction_heads/: minimal_demo.py  phase_transition_demo.py  quick_test.py  run_experiment.sh  run_full_test.sh  test_setup.py  visualize_results.py
grokking/: data.py  model.py  train.py
induction_heads/: data.py  eigen_analysis.py  model.py  train.py
phase_change_analysis/: __init__.py
phase_change_analysis/grokking/: data.py  model.py  train.py
phase_change_analysis/induction_heads/: data.py  eigen_analysis.py  model.py  train.py
phase_change_analysis/utils/: README.md  analysis.py  training.py  visualization.py
tests/: test_gradient_hessian_logging.py
utils/: analysis.py  visualization.py
